--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<%= yield %>
+	<%= render 'layouts/nav' %>
+	<%= bootstrap_flash %>
+	<div class="container">
+		<%= yield %>
+	</div>
 
+	<%= render 'layouts/footer' %>
 </body>
 </html>
