--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,29 @@
+<% if current_user %>
 <footer class="footer-distributed">
 	<div class="footer-left">
-	<h3>Company<span>logo</span></h3>
+	<h3>THE PORTAL</h3>
 	<p class="footer-links">
-	<a href="#">Home</a>
-	<a href="#">Blog</a>
-	<a href="#">Pricing</a>
-	<a href="#">About</a>
-	<a href="#">Faq</a>
-	<a href="#">Contact</a>
+		<%= link_to 'Contact Us', pages_contact_path %></li>
+    	<%= link_to 'About Us', pages_about_path %></li>
+	</p>
+	<p class="footer-company-name">The Portal 2016</p>
+	<div class="footer-icons">
+	<a href="#"><i class="fa fa-facebook"></i></a>
+	<a href="#"><i class="fa fa-twitter"></i></a>
+	<a href="#"><i class="fa fa-linkedin"></i></a>
+	<a href="#"><i class="fa fa-github"></i></a>
+	</div>
+	</div>
+</footer>
+
+<% else %>
+
+<footer class="footer-distributed">
+	<div class="footer-left">
+	<h3>THE PORTAL</h3>
+	<p class="footer-links">
+	<%= link_to 'Contact Us', pages_contact_path %></li>
+    <%= link_to 'About Us', pages_about_path %></li>
 	</p>
 	<p class="footer-company-name">Company Name &copy; 2015</p>
 	<div class="footer-icons">
@@ -18,11 +34,13 @@
 	</div>
 	</div>
 	<div class="footer-right">
-	<p>Contact Us</p>
-	<form action="#" method="post">
-		<input type="text" name="email" placeholder="Email" />
-		<textarea name="message" placeholder="Message"></textarea>
-		<button>Send</button>
+		<h3>Contact Us</h3>
+		<form action="#" method="post">
+			<input type="text" name="email" placeholder="Email" />
+			<textarea name="message" placeholder="Message"></textarea>
+			<button>Send</button>
 		</form>
 	</div>
 </footer>
+
+<% end %>
