--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav navbar-right">pages_contact
           <li><%= link_to 'Contact Us', pages_contact_path %></li>
           <li><%= link_to 'About Us', pages_about_path %></li>
+          <li><%= link_to 'Article', articles_path %></li>
         <% if !current_user %>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
@@ -23,6 +24,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><%= link_to 'Create Article', new_article_path %></li>
             <li><%= link_to 'Edit My Profile', edit_user_registration_path %></li>
             <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
           </ul>
