added comment model

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,9 +11,7 @@
       <%= link_to 'THE PORTAL', root_path, class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-      </ul>
-      <ul class="nav navbar-nav navbar-right">pages_contact
+      <ul class="nav navbar-nav navbar-right">
           <li><%= link_to 'Contact Us', pages_contact_path %></li>
           <li><%= link_to 'About Us', pages_about_path %></li>
           <li><%= link_to 'Article', articles_path %></li>
